# JioBharatIQ_Server

./: .cursorrules  .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  knowledge_base.py  mcp-config.json  pyproject.toml  requirements.txt  server.py  test_server.py  uninstall.sh  validators.py
.cursor/rules/: jds-prototyping.mdc
assets/icons/: IcAccessibility.jsx  IcAdd.jsx  IcAlarm.jsx  IcAlbum.jsx  IcArrowBack.jsx  IcBack.jsx  IcBrain.jsx  IcBurgerMenu.jsx  IcCalendar.jsx  IcCalendarEvent.jsx  IcCalendarWeek.jsx  IcCart.jsx  IcChat.jsx  IcChevronDown.jsx  IcChevronLeft.jsx  IcChevronRight.jsx  IcChevronUp.jsx  IcClose.jsx  IcCloseRemove.jsx  IcConfirm.jsx  IcCopy.jsx  IcCopyDocument.jsx  IcDislike.jsx  IcDocument.jsx  IcDownload.jsx  IcEditPen.jsx  IcError.jsx  IcFavorite.jsx  IcFilterMultiple.jsx  IcFirstpage.jsx  IcHomeConnection.jsx  IcInfo.jsx  IcJioDot.jsx  IcLanguage.jsx  IcLastpage.jsx  IcLike.jsx  IcList.jsx  IcMic.jsx  IcMicOff.jsx  IcMinus.jsx  (+33 more)
src/jiobharatiq_server/: __init__.py  __main__.py  knowledge_base.py  server.py  validators.py
