[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jiobharatiq-server"
version = "3.2.0"
description = "JioBharatIQ — Jio Design System MCP Knowledge Server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "certifi",
]
authors = [
    { name = "Sunit Sharma" }
]
keywords = ["jds", "jio", "design-system", "mcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
jiobharatiq-server = "jiobharatiq_server.__main__:main"

[project.urls]
Homepage = "https://github.com/sunit1986/JioBharatIQ_Server"
Documentation = "https://sunit1986.github.io/design-prototypes/jds-install-guide.html"

[tool.hatch.build.targets.wheel]
packages = ["src/jiobharatiq_server"]
